Content update and word wrap fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,7 +112,7 @@ textarea {
 }
 
 body {
-	background: #f5f5f5;
+	background: #c6cdc7;
 }
 
 a {
@@ -2241,7 +2241,6 @@ p.clear { clear: both; }
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    /* padding-right: 24px; <*> */
     white-space: nowrap;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -2254,6 +2253,7 @@ p.clear { clear: both; }
     display: inline-block;
     font-size: inherit;
     word-wrap: normal;
+    text-transform: none;
 }
 
 .dropdown span.genericon {
@@ -2265,10 +2265,11 @@ p.clear { clear: both; }
 .dropdown-content div.genericon {
     font-size: 16px;
     padding: 12px 0px 0px 12px;;
-    /* padding: 10px 0px 6px 12px; <*> */
-    /* float: left; <*> */
 }
 
+.entry-meta span.cat-links.vertmiddle {
+    color: #2b2b2b;
+}
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
@@ -3561,7 +3562,7 @@ div.entry-summary .footnote-ref a {
 	}
 	dt.twocol { clear: both; font-weight: bold; float: left; margin-bottom: 0.4em }
 	dt.twocol.header { width: 10em; background-color: #ccc; padding-left: 0.4em;}
-	dd.twocol { margin: 0 0 0.4em 0.4em; float: left; }
+	dd.twocol { margin: 0 0 0.4em 10.6em; }
 	dd.sameday { clear: both; margin-left: 10.5em; margin-bottom: 0.4em; }
 
 	ul.pagination {
